--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Image to Sound Conversion</title>
+  <script src="script.js"></script>
+</head>
+<body>
+  <h1>Image to Sound Conversion</h1>
+  <form id="imageForm" enctype="multipart/form-data">
+    <input type="file" id="imageInput" accept="image/*" />
+    <button type="submit">Convert to Sound</button>
+  </form>
+  
+  <div id="audioPlayer">
+    <!-- Placeholder for audio player -->
+  </div>
+</body>
+</html>
