--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Image to Sound Conversion</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
 </head>
 <body>
